Add extractedFragmentMerge test.